--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -84,20 +84,20 @@
   <section id="features">
 
     <div class="row">
-    <div class="col-lg-3 ">
-    <i class="fa-solid fa-circle-check  check-box"></i>
+    <div class=" features-box col-lg-4 ">
+    <i class=" icon fa-solid fa-circle-check fa-4x"></i>
     <h3>Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
     </div>
 
-    <div class="col-lg-3 bull">
-    <i class="fa-solid fa-bullseye"></i>
+    <div class="features-box col-lg-4 ">
+    <i class="icon fa-solid fa-bullseye fa-4x"></i>
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
     </div>
 
-    <div class="col-lg-3 heart">
-    <i class="fa-solid fa-heart"></i>
+    <div class="features-box col-lg-4 ">
+    <i class="icon fa-solid fa-heart fa-4x"></i>
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
     </div>
