cta and footer section

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-light" aria-current="page" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Link</a>
+                <a class="nav-link text-light" href="#pricing">Pricing</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link disabled text-light">Disabled</a>
+                <a class="nav-link  text-light" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -224,9 +224,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
@@ -234,7 +234,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="social-icon fa-brands fa-facebook"></i>
+    <i class="social-icon fa-brands fa-twitter"></i>
+    <i class="social-icon fa-brands fa-instagram"></i>
+    <i class="social-icon fa-solid fa-envelope"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
